--- a/webinars & workshops/31 Mar 2021 Webinar - Beam Data Visualization/BeamDataVisualization/Views/DataFilterView.xaml
+++ b/webinars & workshops/31 Mar 2021 Webinar - Beam Data Visualization/BeamDataVisualization/Views/DataFilterView.xaml
@@ -5,12 +5,20 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BeamDataVisualization.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Background="LightYellow">
+             d:DesignHeight="450" d:DesignWidth="auto" Background="SlateGray">
     <Grid>
-        <StackPanel>
+        <StackPanel Margin="0,0,0,0">
             <TextBlock Text="Group On:" FontWeight="Bold"/>
             <CheckBox Content="Scan Type" IsChecked="{Binding bScanType}" Margin="5"/>
             <CheckBox Content="Field Size" IsChecked="{Binding bFieldSize}" Margin="5"/>
+            <CheckBox Content="Select FS" IsChecked="{Binding bFSCheck}" Margin="5"/>
+            <TextBox Height="20" TextWrapping="Wrap" Text="{Binding bFS}"  Margin="0,0,0,0"/>
+            <CheckBox Content="Select Energy" IsChecked="{Binding bEnergyCheck}" Margin="5"/>
+            <TextBox Height="20" TextWrapping="Wrap" Text="{Binding bEnergy}"  Margin="0,0,0,0"/>
+            <CheckBox Content="Select Depth" IsChecked="{Binding bDepthCheck}" Margin="5"/>
+            <TextBox Height="20" TextWrapping="Wrap" Text="{Binding bDepth}"  Margin="0,0,0,0"/>
+            <CheckBox Content="Keep Scan" IsChecked="{Binding bKeep}" Margin="5"/>
+            <Button Content="Update" Command="{Binding UpdateCommand}" Margin="5"/>
         </StackPanel>
     </Grid>
 </UserControl>
