--- a/webinars & workshops/31 Mar 2021 Webinar - Beam Data Visualization/BeamDataVisualization/Views/ScanPlotView.xaml
+++ b/webinars & workshops/31 Mar 2021 Webinar - Beam Data Visualization/BeamDataVisualization/Views/ScanPlotView.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:BeamDataVisualization.Views"
              xmlns:oxy="http://oxyplot.org/wpf"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Background="White">
+             d:DesignHeight="auto" d:DesignWidth="auto" Background="White">
     <Grid>
         <ScrollViewer Height="550">
             <ItemsControl ItemsSource="{Binding ScanPlotModels}">
